# poki

./: 3rd_licenses.txt  CMakeLists.txt  LICENSE  README.md  build.sh.bat  deps.c  fips.cmd  fips.yml  pk_deps.c  playsounds.c  poki.c  poki.h  viewgltf.c  viewm3d.c
apps/: CMakeLists.txt  assets.yml  hello.c
apps/assets/: cube.m3d  shader.frag  shader.vert
code/: cam.c  cam.h  common.h  gltf_anim.c  gltf_anim.h  io.h  io_gltf.cc  io_image.c  io_m3d.c  io_sound.c  mesh.c  mesh.h  model.c  model.h  node.c  node.h  pipelines.c  pipelines.h  poki.h  primitive.c  primitive.h  renderpass.c  renderpass.h  sfx.c  sfx.h  shader.h  sound.c  sound.cc  sound.h  texture.c  texture.h
examples/: effect.glsl  effect.glsl.h  mipmaps.c  playsound.c  rendertarget.c  single_header.c  viewgltf.c  viewm3d.c
examples/assets/: cesium_man.m3d  tex.dds
pk_audio/: pk_audio.c  pk_audio.h  pk_audio_deps.c  tmixer.c  tmixer.h  vorbis.c
shaders/: build_shaders.sh.bat  common.inc.glsl  gen_mips.glsl  gen_mips.glsl.h  phong.glsl  shaders.glsl  shaders.glsl.h  unlit.glsl
single/: pk_audio.h  poki.h
tools/: join.py  pk_audio.templ  poki.templ
